Support of loading files whenever its Linux or Windows (cuz I got a bug on WSL while attempting to load .csv data). So get this solution in Stackoverflow